--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,29 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import "./styles/Root.css";
+@import "./styles/Reset.css";
+
+.App {
+  display: flex;
+  flex-direction: row;
+  background-color: var(--bg-color);
+  width: 100dvw;
+  height: 100dvh;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* .leftSectionWrapper {
+  display: flex;
+  align-items: flex-end;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-direction: column;
+  background-color: aqua;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+.rightSectionWrapper {
+  display: flex;
+  align-items: flex-start;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-direction: column;
+  height: 100dvh;
+  background-color: black;
+} */
