--- a/src/styles/Reset.css
+++ b/src/styles/Reset.css
@@ -8,11 +8,15 @@
 }
 
 html {
+  margin: 0;
+  padding: 0;
   line-height: 1.5;
   -webkit-text-size-adjust: 100%;
 }
 
 body {
+  margin: 0;
+  padding: 0;
   min-height: 100vh;
   font-family: system-ui, sans-serif;
 }
