--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -2,10 +2,21 @@
 @import "./Reset.css";
 
 .page {
+  /* position: relative; */
   display: flex;
   flex-direction: column;
-  width: 100dvw;
-  height: 100dvh;
+  flex-grow: 1;
+  min-height: 100dvh;
+  margin-left: var(--nav-width);
+  overflow-x: hidden;
+}
+
+.wrapper {
+  /* position: absolute; */
+  margin: 15px 20px 15px 20px;
+  /* flex-grow: 1; */
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -14,7 +25,7 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 16px;
-  padding: 18px 40px;
+  /* padding: 18px 40px; */
   border-bottom: 3px solid rgba(128, 128, 128, 0.1);
 }
 
@@ -23,6 +34,7 @@
   padding: 8px 24px;
   background-color: var(--nav-color);
   border: transparent;
+  font-weight: bold;
 }
 
 .header button:hover {
@@ -32,11 +44,19 @@
 .search {
   display: flex;
   flex-direction: column;
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
 }
 
 .search input {
   margin-bottom: 15px;
+  padding: 10px;
+  border: transparent;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.27);
+}
+
+.search input:focus {
+  outline: none;
+  background-color: rgba(69, 248, 117, 0.045);
 }
 
 .search button {
@@ -45,10 +65,11 @@
   height: 30px;
 }
 
+/* note.module.css 분리 예정 */
 .notes {
   display: flex;
   flex-direction: column;
-  padding: 5px 20px;
+  /* padding: 5px 20px; */
   margin-bottom: 20px;
 }
 
@@ -59,12 +80,21 @@
   margin-bottom: 20px;
 }
 
+.noteholder {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
 /* note.module.css 분리 예정 */
 .note {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  width: 380px;
+  /* justify-content: flex-start; */
+  /* width: 380px;*/
+  flex-basis: 380px;
   height: 300px;
   background-color: var(--note-color-white);
   border-radius: 5px;
