--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   flex-direction: row;
   background-color: var(--bg-color);
-  width: 100dvw;
+  /* width: 100dvw; */
   min-height: 100dvh;
 }
 
