--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -13,7 +13,7 @@
 
 .wrapper {
   /* position: absolute; */
-  margin: 15px 20px 15px 20px;
+  padding: 15px 20px;
   /* flex-grow: 1; */
   display: flex;
   flex-direction: column;
@@ -85,7 +85,7 @@
   flex-direction: row;
   justify-content: flex-start;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 10px;
 }
 
 /* note.module.css 분리 예정 */
