--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -11,6 +11,7 @@
   overflow-x: hidden;
 }
 
+/* 패딩 단독 처리 */
 .wrapper {
   /* position: absolute; */
   padding: 15px 20px;
@@ -63,100 +64,4 @@
   margin-left: auto;
   width: 80px;
   height: 30px;
-}
-
-/* note.module.css 분리 예정 */
-.notes {
-  display: flex;
-  flex-direction: column;
-  /* padding: 5px 20px; */
-  margin-bottom: 20px;
-}
-
-.notes p {
-  font-size: 20px;
-  font-weight: 400;
-  color: var(--text-color-gray);
-  margin-bottom: 20px;
-}
-
-.noteholder {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-/* note.module.css 분리 예정 */
-.note {
-  display: flex;
-  flex-direction: column;
-  /* justify-content: flex-start; */
-  /* width: 380px;*/
-  flex-basis: 380px;
-  height: 300px;
-  background-color: var(--note-color-white);
-  border-radius: 5px;
-  padding: 15px 12px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.27);
-}
-
-.note__title {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.note__title div {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.note__title p {
-  font-size: 15px;
-  margin: 0;
-}
-
-.note__content {
-  background-color: aqua;
-  /* height: 150px; */
-  flex-wrap: wrap;
-  flex-grow: 1;
-}
-
-.note__tag {
-  background-color: greenyellow;
-}
-
-.note__tag p {
-  font-size: 15px;
-  margin: 0;
-}
-
-.note__bottom {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.note__bottom p {
-  font-size: 15px;
-  margin: 0;
-}
-
-.note__bottom div {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.note__bottom img {
-  width: 20px;
-  height: 20px;
 }
