--- a/src/components/Note/Note.module.css
+++ b/src/components/Note/Note.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   /* justify-content: flex-start; */
-  /* width: 380px;*/
+  width: 380px;
   flex-basis: 380px;
   height: 300px;
   background-color: var(--note-color-white);
@@ -42,6 +42,7 @@
   /* height: 150px; */
   flex-wrap: wrap;
   flex-grow: 1;
+  word-wrap: break-word;
 }
 
 .note__tag {
